# bind_llm_with_dataset

./: .gitignore  Makefile  README.md  pyproject.toml
src/: cli_app.py
